# vk-cli

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: Ubuntu  Ubuntu.yml  linux.yml  macos.yml  ubuntu.yml  windows.yml
config/: config.json
lib/api/: apis_data.hpp  longpoll_api.cpp  longpoll_api.hpp  vk_api.cpp  vk_api.hpp
lib/config/: config.cpp  config.hpp  config.json
lib/network/: network.cpp  network.hpp
modules/: CMakeLists.txt
reader/: color.cpp  color.hpp  message.cpp  message.hpp  message_parser.cpp  message_parser.hpp  reader.cpp  reader.hpp  reader_data.hpp
